--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   -->
    <div class="container">
      <div class="content">
-      <span id="result_title">Your Result</span>
+      <h1 id="result_title">Your Result</h1>
       <div class="result">
         <span id="number">76</span>
         <span id="of">of 100</span>
@@ -52,31 +52,31 @@
 
       <span id="title">Summary</span>
       <div class="summary">
-        <img src="./assets/images/icon-reaction.svg" alt="Reaction">
+       <a href="content2"> <img src="./assets/images/icon-reaction.svg" alt="Reaction"> </a> 
         <p id="reaction">Reaction</p> 
         <p class="p_result"> 80 <span> / 100</span></p>
       </div>
 
       <div class="summary">
-        <img src="./assets/images/icon-memory.svg" alt="Memory">
+        <a href="contet2"><img src="./assets/images/icon-memory.svg" alt="Memory"> </a> 
         <p id="memory">Memory</p> 
         <p class="p_result"> 92 <span> / 100</span></p>
       </div>
 
       <div class="summary">
-        <img src="./assets/images/icon-verbal.svg" alt="Verbal">
+        <a href="content2"><img src="./assets/images/icon-verbal.svg" alt="Verbal"></a> 
         <p id="verbal">Verbal</p> 
         <p class="p_result"> 61 <span> / 100</span></p>
       </div>
 
       <div class="summary">
-        <img src="./assets/images/icon-visual.svg" alt="Visual">
+        <a href="content2"><img src="./assets/images/icon-visual.svg" alt="Visual">
+        </a>         
         <p id="visual">Visual</p> 
         <p class="p_result"> 72 <span> / 100</span></p>
       </div>
       
-
-      <button>Continue</button>
+      <a href="content2"> <button>Continue</button></a> 
   
      </div>
     </div>
