--- a/index.html
+++ b/index.html
@@ -11,48 +11,22 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 <body>
-
- <!--
-   Your Result
-   76
-   of 100
-   
-   Great
-   You scored higher than 65% of the people who have taken these tests.
-   
-   Summary
-   
-   Reaction
-   80 / 100
-   
-   Memory
-   92 / 100
-   
-   Verbal
-   61 / 100
-   
-   Visual
-   72 / 100
-   
-   Continue
-  -->
-   <div class="container">
-     <div class="content">
-      <h1 id="result_title">Your Result</h1>
-      <div class="result">
-        <span id="number">76</span>
-        <span id="of">of 100</span>
-      </div>
-      <span id="great">Great</span>
-      <p>You scored higher than 65% of the people who have taken these tests.
-      </p>
+  <main id="grid_container">
+      <div class="content">
+        <h1 id="result_title">Your Result</h1>
+        <div class="result">
+         <span id="number">76</span>
+         <span id="of">of 100</span>
+        </div>
+        <span id="great">Great</span>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
      </div>
       
      <div class="content2">
 
       <span id="title">Summary</span>
       <div class="summary">
-       <a href="content2"> <img src="./assets/images/icon-reaction.svg" alt="Reaction"> </a> 
+        <a href="content2"> <img src="./assets/images/icon-reaction.svg" alt="Reaction"> </a> 
         <p id="reaction">Reaction</p> 
         <p class="p_result"> 80 <span> / 100</span></p>
       </div>
@@ -79,8 +53,8 @@
       <a href="content2"> <button>Continue</button></a> 
   
      </div>
-    </div>
-
+  </main>
+    
 
 
 
